fix padding on mobile, remove logging

--- a/src/main.css
+++ b/src/main.css
@@ -46,3 +46,7 @@ img {
 .mt-3 {
   margin-top: 3rem;
 }
+
+.p-1 {
+  padding: 1rem;
+}
